Overlapping issue changes moved 18-10-2024 6:10PM
Overlapping issue changes moved 18-10-2024 6:10PM

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,6 +156,7 @@ p,.para {@apply text-para}
 .menu-active{@apply lg:shadow-custom-7}
 /* Menu active classes */
 /* Swiper Styles */
+.swiper{@apply !z-[0]}
 .MultiSwiper{@apply xs:!px-[16px] md:!px-[20px] lg:!px-[0] !pb-[30px]}
 .MultiSwiper .swiper-button-prev:after,.MultiSwiper .swiper-button-next:after{@apply !hidden}
 .MultiSwiper .swiper-button-prev{@apply !bg-[url(/assets/icons/arrow-left-dgrey.svg)] hover:!bg-[url(/assets/icons/arrow-left-white.svg)] !left-0}
